force-app/main/default/objects/Opportunity_Segment__c/Opportunity_Segment__c.object-meta.xml
<CustomObject>
    <label>Opportunity Segment</label>
    <nameField>
        <displayFormat>OS-{000}</displayFormat>
        <label>Opportunity Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>