force-app/main/default/objects/Opportunity_Segment__c/fields/IO_Invoice__c.field-meta.xml
<CustomField>
    <fullName>IO_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IO Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Opportunity Segments</relationshipLabel>
    <relationshipName>Opportunity_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>