force-app/main/default/objects/Opportunity_Segment__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Opportunity Segments</relationshipLabel>
    <relationshipName>Opportunity_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>